feat: [KAN-65] rpc & swagger
